--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -21,7 +21,7 @@
 	<div class="container">
 	<h1>My HCI Friends</h1>
 	<h1>You added a new friend!</h1>
-	<a href = "\"><h3>Go back to the homepage</h3></a>
+	<a href = "/"><h3>Go back to the homepage</h3></a>
 
 	{{#each friends}}
 	<div class="friend">
